@@ -55,7 +55,7 @@ class LeafModel(QtCore.QAbstractTableModel):
         self.rbuffer = rbuffer
 
         # The number of digits of the last row
-        self.last_row_width = len(unicode(self.rbuffer.leaf_numrows))
+        self.last_row_width = len(str(self.rbuffer.leaf_numrows))
 
         #
         # The table dimensions
@@ -135,10 +135,10 @@ class LeafModel(QtCore.QAbstractTableModel):
             # For tables horizontal labels are column names, for arrays
             # the section numbers are used as horizontal labels
             if hasattr(self.data_source, 'description'):
-                return unicode(self.data_source.colnames[section])
-            return unicode(section + 1)
+                return str(self.data_source.colnames[section])
+            return str(section + 1)
         # The section label for vertical header. This is a 64 bits integer
-        return unicode(self.rbuffer.start + section + 1)
+        return str(self.rbuffer.start + section + 1)
 
 
     def data(self, index, role=QtCore.Qt.DisplayRole):
