@@ -7,6 +7,8 @@ python3-support branch: shebang lines updated.
 
 python3-support branch: u'some text' has been replaced with 'some text'.
 
+python3-support branch: calls to unicode() replaced with calls to str()
+
 ** September 03, 2013 **
 Bug #22 has been fixed.
 
